changes in initial data and schema to liquidbase
